--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,21 +27,66 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-#       # Runs a set of commands using the runners shell
-#       - name: Run a multi-line script
-#         run: |
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
-
-      - name: 'Send mail'
-        uses: dawidd6/action-send-mail@master
+      - name: Send mail
+        uses: dawidd6/action-send-mail@v3
         with:
-          serveraddress: smtp.163.com
-          serverport: 465
-          username: ${{ secrets.MAILUSERNAME }}
-          password: ${{ secrets.MAILPASSWORD }}
-          subject: TEST Report
-          body:  hello body
-          to: sanbo.xyz@gmail.com
-          from: GitHub Actions
+          #          # smtp 服务器地址
+          #          server_address: smtp.gmail.com
+          #          server_port: 465
+          # smtp 服务器地址
+          server_address: smtp.163.com
+          # smtp 服务器端口
+          server_port: 465
+          # 账号密码
+          username: ${{secrets.MAILUSERNAME}}
+          password: ${{secrets.MAILPASSWORD}}
+          # 标题
+          subject: Github Actions job result
+          # 发送的内容
+          body: file://README.md
+          # 目标邮箱
+          to: sanbo.xyz@gmail.com,xueyongfu@analysys.com.cn
+          from: GithubAction # <user@example.com>
           content_type: text/html
+
+#
+#      - name: Send mail
+#        uses: dawidd6/action-send-mail@v3
+#        with:
+#          # Required mail server address:
+#          server_address: smtp.gmail.com
+#          # Required mail server port:
+#          server_port: 465
+#          # Optional (recommended): mail server username:
+#          username: ${{secrets.MAIL_USERNAME}}
+#          # Optional (recommended) mail server password:
+#          password: ${{secrets.MAIL_PASSWORD}}
+#          # Required mail subject:
+#          subject: Github Actions job result
+#          # Required recipients' addresses:
+#          to: obiwan@example.com,yoda@example.com
+#          # Required sender full name (address can be skipped):
+#          from: Luke Skywalker # <user@example.com>
+#          # Optional whether this connection use TLS (default is true if server_port is 465)
+#          secure: true
+#          # Optional plain body:
+#          body: Build job of ${{github.repository}} completed successfully!
+#          # Optional HTML body read from file:
+#          html_body: file://README.html
+#          # Optional carbon copy recipients:
+#          cc: kyloren@example.com,leia@example.com
+#          # Optional blind carbon copy recipients:
+#          bcc: r2d2@example.com,hansolo@example.com
+#          # Optional recipient of the email response:
+#          reply_to: luke@example.com
+#          # Optional Message ID this message is replying to:
+#          in_reply_to: <random-luke@example.com>
+#          # Optional unsigned/invalid certificates allowance:
+#          ignore_cert: true
+#          # Optional converting Markdown to HTML (set content_type to text/html too):
+#          convert_markdown: true
+#          # Optional attachments:
+#          attachments: attachments.zip,git.diff,./dist/static/*.js
+#          # Optional priority: 'high', 'normal' (default) or 'low'
+#          priority: low
+#
