--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,21 +26,22 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: Send mail ✉️
-          uses: dawidd6/action-send-mail@v2
-          with:
-            # smtp 服务器地址
-            server_address: smtp.163.com
-            # smtp 服务器端口
-            server_port: 465
-            username: ${{secrets.MAILUSERNAME}}
-            password: ${{secrets.MAILPASSWORD}}
-            subject: test Report
-            body: "test"
-            to: xueyongfu@analysys.com.cn
-            from: sanbo
-            content_type: text/html
-            convert_markdown: true
+
+      - name: Send mail
+        uses: dawidd6/action-send-mail@v2
+        with:
+          # smtp 服务器地址
+          server_address: smtp.163.com
+          # smtp 服务器端口
+          server_port: 465
+          username: ${{secrets.MAILUSERNAME}}
+          password: ${{secrets.MAILPASSWORD}}
+          subject: test Report
+          body: "test"
+          to: xueyongfu@analysys.com.cn
+          from: sanbo
+          content_type: text/html
+          convert_markdown: true
 
 #      - name: Send mail
 #        uses: dawidd6/action-send-mail@v3
