--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,9 @@ jobs:
           to: xueyongfu@analysys.com.cn
           from: sanbo
           content_type: text/html
-          convert_markdown: true
+          secure: true
+          ignore_cert: true
+          priority: low
 
 #      - name: Send mail
 #        uses: dawidd6/action-send-mail@v3
