--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          echo "Hello, world!"
+          echo "username: ${{ secrets.MAILUSERNAME }} "
+          echo "passwrd: ${{ secrets.MAILPASSWORD }} "
       
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
