--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,11 @@ jobs:
          server_address: smtp.gmail.com
          server_port: 465
 
-         username: ${{ secrets.MAILUSERNAME }}
-         password: ${{ secrets.MAILPASSWORD }}
+         #username: ${{ secrets.MAILUSERNAME }}
+         #password: ${{ secrets.MAILPASSWORD }}
+         
+         username: analysys.sdk@gmail.com
+         password: analysys
 
          subject: Github Actions job result
          to: xueyongfu@analysys.com.cn
