--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,9 @@ jobs:
          password: ${{ secrets.MAILPASSWORD }}
 
          subject: Github Actions job result
-         to: xueyongfu@analysys.com.cn
+         to: xueyongfu@analysys.com.cn,chenqingquan@analysys.com.cn
+         cc: chenqingquan@analysys.com.cn
+         bcc: chenqingquan@analysys.com.cn
          from: Luke Skywalker
          secure: true
          body: Build job of ${{github.repository}} completed successfully!
