--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
          to: xueyongfu@analysys.com.cn,chenqingquan@analysys.com.cn
          cc: chenqingquan@analysys.com.cn
          bcc: chenqingquan@analysys.com.cn
-         from: Luke Skywalker
+         from: GithubActions
          secure: true
          body: Build job of ${{github.repository}} completed successfully!
          ignore_cert: true
