--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  # run every 1 hour
+  schedule:
+    #   分 时 日 月 周
+    - cron: '* */24 * * *'
 
 jobs:
   build:
