--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
   schedule:
     #   分 时 日 月 周
-    - cron: '* */8 * * *'
+    - cron: '30 8,17 * * *'
 
 jobs:
   build:
