--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,10 +55,12 @@ jobs:
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
-         server_address: smtp.163.com
-         server_port: 465
+#          server_address: smtp.163.com
+#          server_port: 465
 #          server_address: smtp.gmail.com
 #          server_port: 465
+         server_address: smtp.exmail.qq.com
+         server_port: 465
          username: ${{ secrets.MAILUSERNAME }}
          password: ${{ secrets.MAILPASSWORD }}
          subject: "[易观千帆]收数地址状态监控"
