--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    if: "!startsWith(github.event.head_commit.message, 'GitHubAction')"
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
