--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,8 +60,8 @@ jobs:
 #          server_port: 465
 #          server_address: smtp.gmail.com
 #          server_port: 465
-         server_address: smtp.exmail.qq.com
-         server_port: 465
+         server_address: smtp.analysys.com.cn
+         server_port: 25
          username: ${{ secrets.MAILUSERNAME }}
          password: ${{ secrets.MAILPASSWORD }}
          subject: "[易观千帆]收数地址状态监控"
