--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
 #          server_port: 465
 #          server_address: smtp.gmail.com
 #          server_port: 465
-         server_address: smtp.analysys.com.cn
+         server_address: smtp.exmail.qq.com
          server_port: 465
          username: ${{ secrets.MAILUSERNAME }}
          password: ${{ secrets.MAILPASSWORD }}
